# ALD-01

./: .gitignore  Dockerfile  MODEL_CARD.md  README.md  USAGE.md  package.json  pyproject.toml  requirements.txt
data/: ald01_dataset.json
deploy/: README_DEPLOY.md
notebooks/: ALD01_Colab.ipynb
ollama/: Modelfile
plans/: ald-01-agi-system-proposal.md  ald-01-comprehensive-plan.md
scripts/: convert_gguf.md  convert_to_gguf.sh  evaluate.py  infer.py  merge_lora.py  package_model.sh
server/: app.py
src/ald01/: __init__.py  __main__.py  cli.py  config.py
src/ald01/agents/: __init__.py  base.py  codegen.py  debug.py  general.py  review.py  security.py
src/ald01/core/: __init__.py  analytics.py  autostart.py  backup_manager.py  brain.py  chat_engine.py  code_analyzer.py  config_editor.py  context_manager.py  data_manager.py  events.py  executor.py  export_system.py  file_watcher.py  gateway.py  integrations.py  learning.py  localization.py  logging_config.py  mcp_manager.py  memory.py  modes.py  multi_model.py  notifications.py  orchestrator.py  pipeline.py  plugins.py  prompt_library.py  reasoning.py  revert.py  scheduler.py  self_heal.py  session_manager.py  skill_manager.py  status.py  subagents.py  tasks.py  template_engine.py  themes.py  tools.py  (+3 more)
src/ald01/dashboard/: __init__.py  api_ext.py  api_routes.py  api_v2.py  server.py
src/ald01/dashboard/static/: app.js  index.html  styles.css
src/ald01/doctor/: __init__.py  diagnostics.py
src/ald01/onboarding/: __init__.py  wizard.py
src/ald01/providers/: __init__.py  base.py  benchmark.py  manager.py  ollama.py  openai_compat.py
src/ald01/services/: __init__.py  voice.py
src/ald01/telegram/: __init__.py  bot.py
src/ald01/utils/: __init__.py  hardware.py
src/ald01/visualization/: __init__.py  thinking.py
training/: train.py
